--- a/css/stylee.css
+++ b/css/stylee.css
@@ -235,31 +235,35 @@ a {
 .accordion-borderless .accordion-item .accordion-button {
     border-radius: 1px;
 }
-#count{
-   background-image: url(../images/invitation-2508607__340.jpg);
+.counter {
+   background-image:linear-gradient(to bottom ,rgba(214, 46, 52, 0.593), rgba(214, 46, 52, 0.593)), url("../images/invitation-2508607__340.jpg");
     background-repeat: no-repeat;
     background-position: center center;
     background-size: 100% 100%;
     position: relative;
-    height: 330px;
+    height: 300px;
+    width: 100%;
+    color: rgb(238, 236, 236);
     overflow: hidden;
+
 }
 .countdown {
     position: absolute;
-    top: 0;
-    left: 0;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
     height: 100%;
     margin-top: 50px;
-    background-color: rgba(214, 46, 52, 0.593);
-    color: white;
+    color: rgb(247, 242, 242);
+     overflow: hidden;
 }
 .single-counter {
     padding: 40px;
     border: 1px solid white;
     font-weight: 400;
     font-size: 30px;
-    margin-top: 110px;
+    
   }
 
 .icons i {
